# mdslackcli

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: windows.yml
src/: main.rs
tests/: aliases.rs  channels_mock.rs  help.rs  whoami_mock.rs
