[package]
name = "mdslackcli"
version = "0.2.2"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dialoguer = "0.11"
# Use Windows Credential Manager
keyring = { version = "3", features = ["windows-native"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
httpmock = "0.7"
